# JS_AI_project

./: .env.example  .gitignore  pyproject.toml
10일차/: 머신러닝 Day 3-1. Random Forest.ipynb  머신러닝 Day 3-2. GBM, XGBoost, LightGBM, CatBoost.ipynb
10일차/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
10일차/catboost_info/learn/: events.out.tfevents
10일차/catboost_info/tmp/: cat_feature_index.31211cc7-ea1f8e38-e56caf1c-5e147e06.tmp  cat_feature_index.36f61cbb-70b339b3-e4c63b35-1b606dc4.tmp
11일차/: 머신러닝 Day 4-1. 결측치 및 이상치 처리.ipynb  머신러닝 Day 4-2. Under 및 Oversampling.ipynb  머신러닝 Day 4-3. SVDD.ipynb  머신러닝 Day 4. 미니프로젝트.ipynb
11일차/11일차/: 머신러닝 Day 4-1. 결측치 및 이상치 처리.ipynb  머신러닝 Day 4-2. Under 및 Oversampling.ipynb  머신러닝 Day 4-3. SVDD.ipynb
12일차/: 머신러닝 Day 5-1. 차원 축소.ipynb  머신러닝 Day 5-2. SHAP Value.ipynb  머신러닝 Day 5-3. Trace data 처리.ipynb  머신러닝 Day 5. 미니프로젝트.ipynb
12일차/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
12일차/catboost_info/learn/: events.out.tfevents
13일차/: 머신러닝 Day 6-1. Clustering.ipynb  머신러닝 Day 6-2. STUCCO.ipynb  머신러닝 Day 6. 미니프로젝트.ipynb
14일차_실습/: 14.1 대화형 Agent.ipynb  14.3 ML Agent.ipynb  14.4 Data ML Agent.ipynb
14일차_실습/chroma_store/: chroma.sqlite3
14일차_실습/ml_tools/: data_tools.py  logistic_regression_tool.py  oneclass_svm_tool.py  xgboost_classifier_tool.py
14일차_실습/ml_tools/models/: logistic_failure.joblib  oneclass_svm.joblib  xgboost_failure.joblib
15일차_실습/: 15.1 State와 Node, Graph.ipynb  15.2 Conditional Edge.ipynb  15.3 LangGraph + LangChain.ipynb  15.4 Tool과 Sub-Agent.ipynb
16일차_실습/: 16.1 AI 토론.ipynb  16.2  Tool과 Sub-Graph.ipynb  16.3 slack API 활용하기.ipynb  16.4 ChromaDB와 Text2SQL.ipynb  concrete.db
16일차_실습/chroma_regulations/: chroma.sqlite3
17일차_실습/: 17.1 Advanced RAG 핵심 실습.ipynb  17.2 FastAPI 기초.ipynb  17.3 함수를 FastAPI 서버로.ipynb  17.4 FastAPI와 Slack 웹훅.ipynb  hello.py
3일차_실습/: 3.1 Tokenizer, Generation.ipynb  3.2 OpenAI_API.ipynb  3.3 Prompt_Engineering.ipynb  3.4 Tool_Calling.ipynb  chatbot.py
4일차/: 4.1 PDF_Summarization.ipynb  4.2 STT, TTS.ipynb  4.3 RAG.ipynb  4.4 Agent_통합.ipynb  4.5 pdf 정리 agent.ipynb  pdf_summary.py
4일차/samples/: summary.txt
5일차/: 5.1 LangChain 기초.ipynb  5.2 Langchain tool.ipynb  5.3 Langchain RAG.ipynb  5.4 대화형 Agent.ipynb  langchain_multiturn.py  pdf_summary.py
5일차/chroma_store/: chroma.sqlite3
6일차/: 6.5 Vision_Inference.ipynb
7일차/: 7.2 Fault_Diagnosis_1DCNN.ipynb
7일차/Dataset/cwru/: y_test.npy  y_train.npy
8일차/: 머신러닝 Day 1. 미니프로젝트.ipynb
8일차/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
8일차/catboost_info/learn/: events.out.tfevents
9일차/: 머신러닝 Day 2-1. 다중선형회귀모형.ipynb  머신러닝 Day 2-3. 의사결정나무.ipynb  머신러닝 Day 2. 미니프로젝트.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
