[project]
name = "silseup"
version = "0.1.0"
description = "SK Autonomous R&D 실습 (Jupyter notebooks)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "catboost>=1.2.10",
    "datasets>=5.0.0",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "fsspec>=2026.4.0",
    "gcsfs>=2026.6.0",
    "huggingface-hub>=1.20.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "numba>=0.63.0",
    "numexpr>=2.14.1",
    "numpy>=2.4.0,<2.5",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyamg>=5.3.0",
    "pydoe2>=1.3.0",
    "pydoe3>=1.6.2",
    "pymatgen>=2026.5.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "sympy>=1.14.0",
    "tabulate>=0.10.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "xgboost>=3.3.0",
    "yfinance>=1.4.1",
]

[tool.uv]
# venv: AutoRnDEnv\.venv (base python = miniconda3) — see .env / .vscode/settings.json
