[project]
name = "silseup"
version = "0.1.0"
description = "SK Autonomous R&D 실습 (Jupyter notebooks)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "autogluon==1.5.0",
    "boruta>=0.4.3",
    "borutashap>=1.0.17",
    "catboost>=1.2.10",
    "chronos>=0.3",
    "chronos-forecasting>=2.3.0",
    "datasets>=4.0.0",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.12.0",
    "fsspec>=2025.3.0,<=2025.3.2",
    "gcsfs>=2025.3.0,<=2025.3.2",
    "hf-xet>=1.5.1",
    "huggingface-hub[hf-xet]>=0.36.0,<1.0",
    "imbalanced-learn>=0.14.2",
    "imblearn>=0.0",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "mrmr-selection>=0.2.8",
    "numba>=0.63.0",
    "numexpr>=2.14.1",
    "numpy>=1.25.0,<2.4.0",
    "openai>=2.43.0",
    "optuna>=4.9.0",
    "optuna-integration>=4.9.0",
    "pandas>=2.0.0,<2.4.0",
    "pillow>=11.3.0",
    "polars>=1.41.2",
    "pyamg>=5.3.0",
    "pydoe2>=1.3.0",
    "pydoe3>=1.6.2",
    "pymatgen>=2026.5.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.4.0,<1.8.0",
    "scipy>=1.5.4,<1.17",
    "seaborn>=0.13.2",
    "shap>=0.50.0",
    "shap-hypetune>=0.1.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.58.0",
    "sympy>=1.14.0",
    "tabpfn>=6.2.0,<6.2.1",
    "tabulate>=0.10.0",
    "timesfm>=2.0.1",
    "torch>=2.6,<2.10",
    "transformers>=4.51.0,<4.58",
    "xgboost>=2.0,<3.2",
    "xicorpy>=0.6",
    "yfinance>=1.4.1",
]

[tool.uv]
# venv: AutoRnDEnv\.venv (base python = miniconda3) — see .env / .vscode/settings.json
